--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "commander": "^2.19.0",
     "inquirer": "^6.2.2",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.20"
   }
 }
