--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,8 @@ jobs:
       # run tests!
       - run: 
           command: node day.js -v
+      
+      - run:
           command: npm run test
 
       - save_cache:
